Grace/tests/gibbs/errors/t142.grace
// ERROR = P1001
var sum := 1 +
